--- a/style.css
+++ b/style.css
@@ -8,24 +8,31 @@
 html{
     font-size: 100%;
 }
-body{
-    /* Here you can set your default font-family, line-height 
-        You can also use max-width and auto margins to limit the width of the page content
-        If you set a background-color here it will be the site background color.
-    */
+.site-title{
+    font-family: "Jaro", sans-serif;
+    font-size: 50px;
+  }
+  h1{
+    font-size: 2rem;
+  }
+  h2{
+    font-size: 2rem;
+  }
+body{background-color: rgb(6, 16, 150);
+    color: #00ff4c;
 
-}
-h1,h2,h3,h4,h5,h6{
-    /* Here you can set the font-family for your headings */
+    max-width: 700px;
+    max-width: 70ch;
+    margin-left: auto;
+    margin-right: auto;
 
-}
 
 /*  ------------------------------------------------------
     HYPERLINK STYLING 
     Change the colors here to match the colors you want for your site.
     ------------------------------------------------------ */ 
 a{
-    color: #1313f1;
+    color: #1329f1;
     text-decoration: none;
     border-bottom: 1px solid #1313f1;
 }
@@ -34,7 +41,7 @@ a:hover{
     border-bottom: 3px solid #0fa4df;
 }
 a:visited{
-    color: #1313f1;
+    color: #260ff1;
     border-bottom: 1px solid #1313f1;
 }
 
@@ -59,11 +66,11 @@ nav li
 }
 /* Change this to whatever color you want your nav and visited nav links to be */
 nav li a{
-    color: #1313f1;
+    color: #2213f1;
     border-bottom: none;
 }
 nav li a:visited{
-    color: #1313f1;
+    color: #139eb1;
     
 }
 
@@ -101,3 +108,6 @@ img,video{
     width: 100%;
     height: 100%;
   }
+  h1{
+    color: #d0ff00;
+}
